Fix spacing above blog page

--- a/assets/scss/components/content.scss
+++ b/assets/scss/components/content.scss
@@ -2,6 +2,10 @@ body {
   main {
     article {
 
+      .content-search {
+        margin: -1.25rem 0 1rem 0;
+      }
+
       .content-header,
       .content-categories {
         padding: 0 2rem 2rem 2rem;
